# Vive-coding-pdca-system

./: .env.example  .gitignore  .gitleaks.toml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml  コントリビューションガイド.md  変更履歴.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
config/: README.md  default.yml
config/environments/: dev.yml  prod.yml  stg.yml
config/i18n/: messages_en.yml  messages_ja.yml
config/openclaw/: allowed_commands.yml  disk_monitor.sh  gpu_monitor.sh  health_report.sh
config/prompts/: templates.yml
docker/: Dockerfile.sandbox  README.md  whitelist.yml
docs/: インストーラービルドガイド.md  オンボーディングガイド.md  システムアーキテクチャ図.md  ドキュメント精査レポート.md  バイブコーディングPDCA_実装手順書_v3.md  バイブコーディングPDCAシステム_要件定義書_v6.md  ローカルセットアップ完全ガイド.md  必要なドキュメント一覧.md  機能提案書.md  追加機能提案書.md
docs/adr/: ADR-001_モデル選定.md  ADR-002_プロジェクト種別とABC操作分類.md  ADR-003_脆弱性スキャンツール選定.md  ADR-004_RAG検索実装選定.md  ADR-005_GitHub_App権限設計.md  ADR-006_マルチプロジェクト物理隔離.md  ADR-007_サンドボックス設計.md  ADR-008_クラウドローカルLLM切替設計.md
docs/infra/: AI推論サーバー構築ガイド.md  三層独立運用体制_アーキテクチャ設計書.md
docs/ops/: Approval_Checklist.md  Discord_チャンネル設計書.md  Runbook_通常運用.md  Suppress_List_運用ルール.md  フォールバック運用ガイド.md
docs/テンプレート/: フィードバックログ_テンプレ.md  検査結果報告_テンプレ.md  統括レビュー要約_テンプレ.md
docs/手順書/: 00_はじめに.md  01_ハードウェア構築手順書.md  02_システムセットアップ手順書.md  03_ローカルセットアップ手順書.md  04_運用保守手順書.md  05_バイブコーディングPDCA_実装手順書.md  05_バイブコーディングPDCA_実装手順書_v3.md  06_インストーラービルド手順書.md  インストーラービルド手順書.md  システムセットアップ完全手順書.md  システムセットアップ手順書.md  ハードウェア構築完全手順書.md  ハードウェア構築手順書.md  バイブコーディングPDCA_実装手順書_v3.md  ローカルセットアップ完全手順書.md  ローカルセットアップ手順書.md  運用保守完全手順書.md  運用保守手順書.md
docs/提案書/: 機能提案書.md
docs/管理/: セキュリティポリシー.md  テスト・デバッグ検査要綱.md  ドキュメント精査レポート.md  変更履歴.md  必要なドキュメント一覧.md  残タスク一覧.md
docs/設計書/: APIリファレンス.md  Discordチャンネル設計書.md  GUI画面要素仕様書.md  システムアーキテクチャ図.md  バイブコーディングPDCAシステム_要件定義書.md  プロンプトテンプレート仕様.md  ロール権限マトリクス.md  三層独立運用体制_アーキテクチャ設計書.md
docs/説明書/: AI推論サーバー説明書.md  FAQ.md  OpenClaw説明書.md  オンボーディング説明書.md  コントリビューション説明書.md
docs/運用/: インシデント対応手順書.md  トラブルシューティングガイド.md  フォールバック運用手順書.md  ランブック_通常運用.md  リリースチェックリスト.md  承認チェックリスト.md  抑制リスト_運用ルール.md
installer/: README.md  __init__.py  build.py  downloader.py  installer_config.yml
src/vibe_pdca/: __init__.py  __main__.py
tests/: conftest.py  test_acceptance.py  test_analytics.py  test_api_server.py  test_audit.py  test_audit_transport.py  test_backup.py  test_chatops.py  test_checker.py  test_ci_adapter.py  test_circuit_breaker.py  test_compliance.py  test_concurrency_control.py  test_config.py  test_context_manager.py  test_cost_estimator.py  test_cost_manager.py  test_cycle_template.py  test_dashboard.py  test_decision.py  test_degradation.py  test_discord_liaison.py  test_downloader.py  test_dry_run.py  test_e2e_scenario.py  test_edge_case_explorer.py  test_engine.py  test_executor.py  test_exporter.py  test_fine_tuning.py  test_fixtures_integration.py  test_gateway.py  test_github.py  test_glossary.py  test_governance.py  test_gui.py  test_health.py  test_hot_reload.py  test_i18n.py  test_impact_analysis.py  (+38 more)
tests/fixtures/: README.md  sample_goal.json  sample_review_findings.json
tests/gui/: alerts.html  alerts.js  app.js  common.js  cost-trend.html  cost-trend.js  goal.html  goal.js  (+12 more)
(+95 files in other folders)
