[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vibe-pdca"
version = "0.1.0"
description = "バイブコーディングPDCA自動開発システム – LLMゲートウェイ"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "openai>=1.50",
    "anthropic>=0.40",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "mypy>=1.13",
    "types-PyYAML>=6.0",
]
gui = [
    "flet>=0.25",
]
google = [
    "google-genai",
]

[project.scripts]
vibe-pdca = "vibe_pdca.gui.app:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
exclude = ["src/vibe_pdca/gui/"]
